Updated the feedback form to fix wrapping

--- a/pupil-spa/src/app/survey-feedback/survey-feedback.component.scss
+++ b/pupil-spa/src/app/survey-feedback/survey-feedback.component.scss
@@ -3,3 +3,7 @@ label {
     font-weight: 700;
     margin-bottom: 10px;
 }
+
+fieldset {
+    min-width: 0;
+}
